--- a/MyWebApp/MyWebApp.csproj
+++ b/MyWebApp/MyWebApp.csproj
@@ -102,6 +102,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\Products23API - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\Products23API - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
